syntax = "proto3";

package mygen.protos;

message Person {
  string name = 1;
  int32 age = 2;
}

message FooReq {
  string asdf = 1;
}

message FooResp {}

message BarReq {}

message BarResp {}

service Some {
  rpc foo(FooReq)  returns (FooResp) {}
  rpc bar(BarReq)  returns (BarResp) {}
}
